fix: Stop panes misaligning when controls are deactivated
Jira Issue DD-2406

--- a/css/common.scss
+++ b/css/common.scss
@@ -7,6 +7,7 @@ div.dtsp-topRow {
     justify-content: space-around;
     align-content: flex-start;
 	align-items: flex-start;
+	min-height: 37px;
 	
 	input.dtsp-search{
 		text-overflow: ellipsis;
@@ -27,6 +28,11 @@ div.dtsp-topRow {
 		div.dtsp-searchCont{
 			position: relative;
 			width: 100%;
+
+			input.dtsp-disabledButton {
+				padding-top: 10px;
+				padding-bottom: 10px;
+			}
 		}
 
 		input {
